Replaced monospace font with meslolgs.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -115,7 +115,7 @@ bind = $mod SHIFT, j, movewindow, d
 # ──────────────────────────────
 # App Shortcuts
 # ──────────────────────────────
-bind = SUPER SHIFT, D, exec, ~/.config/scripts/power-menu
+bind = SUPER SHIFT, X, exec, ~/.config/scripts/power-menu
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
@@ -166,7 +166,7 @@ general {
         allow_tearing = false
         gaps_in = 4
         gaps_out = 9
-        col.active_border = rgb(3f4044)
+        col.active_border = rgb(454547)
         col.inactive_border = rgb(232325)
         border_size = 2
 }
