--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -30,10 +30,10 @@ exec_always ~/.config/scripts/power-saver
 # Appearance | Borders and Gaps
 # ──────────────────────────────
 font pango:monospace 0.001
-client.focused          #3f4044 #3f4044 #ffffff #3f4044
-client.focused_inactive #222224 #222224 #ffffff #222224
-client.urgent           #865054 #222224 #222224 #222224
-client.unfocused        #222224 #222224 #ffffff #222224
+client.focused          #454547 #454547 #ffffff #454547
+client.focused_inactive #232325 #232325 #ffffff #232325
+client.urgent           #865054 #232325 #232325 #232325
+client.unfocused        #232325 #232325 #ffffff #232325
 default_border pixel 2
 gaps inner 8
 gaps outer 2
