--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -192,7 +192,7 @@ misc {
 # Disable animations
 # ──────────────────────────────
 animations {
-    enabled = true
+    enabled = false
         bezier = wind, 0.05, 0.9, 0.1, 1.05
         bezier = winIn, 0.1, 1.0, 0.1, 1.0
         bezier = winOut, 0.3, -0.3, 0, 1
