idk what i even did ngl

--- a/waybar/.config/waybar/sway/config.jsonc
+++ b/waybar/.config/waybar/sway/config.jsonc
@@ -1,6 +1,6 @@
 {
     "include": "~/.config/waybar/sway/modules.json",
-    "layer": "top",
+    "layer": "bottom",
     "position": "top",
     "height": 30,
     "spacing": 6,
