--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,8 +1,8 @@
 # Font configuration
-font = MesloLGS Nerd Font Mono:weight=regular:size=13.15
-font-bold = MesloLGS Nerd Font Mono:weight=bold:size=13.15
-font-italic = MesloLGS Nerd Font Mono:weight=regular:slant=italic:size=13.15
-font-bold-italic = MesloLGS Nerd Font Mono:weight=bold:slant=italic:size=13.15
+font = monospace:weight=regular:size=13.15
+font-bold = monospace:weight=bold:size=13.15
+font-italic = monospace:weight=regular:slant=italic:size=13.15
+font-bold-italic = monospace:weight=bold:slant=italic:size=13.15
 
 # Monitor configuration
 pad = 5x5 center
