--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -5,4 +5,4 @@ default-timeout=3000
 background-color=#1e1e20
 border-color=#3f4044
 border-radius=7
-font=Rubik, JetBrainsMono Nerd Font 13
+font=Rubik, monospace 13
