--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 # Utilities
 exec-once = swayosd-server
-exec-once = /usr/lib/hyprpolkitagent
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.config/scripts/power-saver
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
@@ -13,7 +13,7 @@ exec-once = foot --server
 misc {
     force_default_wallpaper = 0
         disable_hyprland_logo = true
-        background_color = 0x18181a
+        background_color = 0x171719
 }
 exec-once = waybar -c ~/.config/waybar/hyprland/config.jsonc
 exec-once = mako
