Replaced tofi with rofi.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $terminal = footclient
 $fileManager = footclient -e lf
 $fileManager-alt = nemo
 $browser = zen-browser
-$menu = tofi-drun
+$menu = rofi -show dmenu
 
 # ──────────────────────────────
 # Volume Control
