--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $terminal = footclient
 $fileManager = footclient -e lf
 $fileManager-alt = nemo
 $browser = zen-browser
-$menu = rofi -show dmenu
+$menu = rofi -show drun
 
 # ──────────────────────────────
 # Volume Control
