--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -10,6 +10,7 @@ set $fm footclient -e lf
 set $fm-gui nemo
 set $menu rofi -show drun
 set $mod Mod4
+output * bg #161618 solid_color
 floating_modifier $mod
 
 # ──────────────────────────────
@@ -20,7 +21,6 @@ exec --no-startup-id foot --server
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec mako
 exec waybar -c ~/.config/waybar/sway/config.jsonc
-exec swaybg -m fill -c '#161618'
 exec wl-paste --type image --watch cliphist store
 exec wl-paste --type text --watch cliphist store
 exec_always swayosd-server
@@ -85,9 +85,9 @@ bindsym $mod+Shift+c kill
 bindsym $mod+Shift+s exec hyprshot -o ~/Pictures/Screenshots -m region -z
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+b exec $browser
-bindsym $mod+f exec $fm
-bindsym $mod+Shift+f exec $fm-gui
-bindsym Mod1+d exec hyprpicker
+bindsym $mod+f exec $fm-gui
+bindsym $mod+Shift+f exec $fm
+bindsym $mod+Shift+d exec hyprpicker
 bindsym $mod+s exec hyprshot -o ~/Pictures/Screenshots -m output -z
 bindsym $mod+space exec $menu
 bindsym $mod+v exec cliphist list | rofi -dmenu -p "Cliphist:" | cliphist decode | wl-copy
