--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -12,6 +12,9 @@ set $menu rofi -show drun
 set $mod Mod4
 output * bg #161618 solid_color
 floating_modifier $mod
+exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
+exec hash dbus-update-activation-environment 2>/dev/null && \
+     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
 # ──────────────────────────────
 # Startup Applications
@@ -82,13 +85,13 @@ bindsym Mod1+return fullscreen toggle
 bindsym $mod+period exec rofi -modi emoji -show emoji -no-show-icons
 bindsym $mod+return exec footclient
 bindsym $mod+Shift+c kill
-bindsym $mod+Shift+s exec hyprshot -o ~/Pictures/Screenshots -m region -z
+bindsym $mod+Shift+s exec ~/.config/scripts/regional-screenshot
+bindsym $mod+s exec ~/.config/scripts/full-screenshot
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+b exec $browser
 bindsym $mod+f exec $fm-gui
 bindsym $mod+Shift+f exec $fm
 bindsym $mod+Shift+d exec hyprpicker
-bindsym $mod+s exec hyprshot -o ~/Pictures/Screenshots -m output -z
 bindsym $mod+space exec $menu
 bindsym $mod+v exec cliphist list | rofi -dmenu -p "Cliphist:" | cliphist decode | wl-copy
 
