--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -18,8 +18,8 @@ gamma-correct-blending= no
 
 [colors]
 # alpha = 0.8
-foreground = d3d3d5
-background = 1e1e20
+foreground = d2d2d2
+background = 1c1c1c
 regular0 = 353537
 regular1 = 865054
 regular2 = 5f7a5f
