Matched configurations with sway.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -13,9 +13,9 @@ exec-once = foot --server
 misc {
     force_default_wallpaper = 0
         disable_hyprland_logo = true
-        background_color = 0x161618
+        background_color = 0x151515
 }
-exec-once = waybar -c ~/.config/waybar/hyprland/config.jsonc
+exec-once = waybar
 exec-once = mako
 misc:vfr = true
 
@@ -43,7 +43,7 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = nemo
+$fileManager-alt = thunar
 $browser = zen-browser
 $menu = rofi -show drun
 
@@ -118,10 +118,10 @@ bind = $mod SHIFT, j, movewindow, d
 bind = SUPER SHIFT, X, exec, ~/.config/scripts/power-menu
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
-bind = $mod, E, exec, $fileManager
-bind = $mod SHIFT, E, exec, $fileManager-alt
+bind = $mod, F, exec, $fileManager-alt
+bind = $mod SHIFT, F, exec, $fileManager
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -no-show-icons
-bind = $mod SHIFT, F, exec, hyprpicker
+bind = $mod SHIFT, D, exec, hyprpicker
 bind = $mod, S, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
 bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
 
@@ -151,8 +151,7 @@ decoration {
     blur {
         enabled = false
     }
-    rounding = 7
-        rounding_power = 2
+    rounding = 0
 }
 decoration:shadow {
                enabled = false
