Changed some themes.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,5 +1,6 @@
 # Utilities
 exec-once = swayosd-server
+exec-once = nm-applet
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.config/scripts/power-saver
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
@@ -43,7 +44,7 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = thunar
+$fileManager-alt = nautilus
 $browser = zen-browser
 $menu = rofi -show drun
 
@@ -116,14 +117,15 @@ bind = $mod SHIFT, j, movewindow, d
 # App Shortcuts
 # ──────────────────────────────
 bind = SUPER SHIFT, X, exec, ~/.config/scripts/power-menu
-bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
+bind = Control SHIFT, D, pass, class:^(com\.obsproject\.Studio)$
+bind = ALT SHIFT, D, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, F, exec, $fileManager-alt
 bind = $mod SHIFT, F, exec, $fileManager
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -no-show-icons
 bind = $mod SHIFT, D, exec, hyprpicker
-bind = $mod, S, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
-bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
+bind = $mod, S, exec, ~/.config/scripts/full-screenshot
+bind = $mod SHIFT, S, exec, ~/.config/scripts/regional-screenshot
 
 # ──────────────────────────────
 # Window Movement & Resizing
@@ -154,8 +156,8 @@ decoration {
     rounding = 0
 }
 decoration:shadow {
-               enabled = false
-           }
+    enabled = false
+}
 
 # ──────────────────────────────
 # Window decorations
