--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,6 +1,5 @@
 # Utilities
 exec-once = swayosd-server
-exec-once = nm-applet
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = ~/.config/scripts/power-saver
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
@@ -11,6 +10,7 @@ env = XCURSOR_SIZE,24
 
 # Startup applications
 exec-once = foot --server
+exec-once = nm-applet
 misc {
     force_default_wallpaper = 0
         disable_hyprland_logo = true
@@ -44,7 +44,7 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = nautilus
+$fileManager-alt = thunar
 $browser = zen-browser
 $menu = rofi -show drun
 
@@ -117,12 +117,11 @@ bind = $mod SHIFT, j, movewindow, d
 # App Shortcuts
 # ──────────────────────────────
 bind = SUPER SHIFT, X, exec, ~/.config/scripts/power-menu
-bind = Control SHIFT, D, pass, class:^(com\.obsproject\.Studio)$
-bind = ALT SHIFT, D, pass, class:^(com\.obsproject\.Studio)$
+bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, F, exec, $fileManager-alt
 bind = $mod SHIFT, F, exec, $fileManager
-bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -no-show-icons
+bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
 bind = $mod SHIFT, D, exec, hyprpicker
 bind = $mod, S, exec, ~/.config/scripts/full-screenshot
 bind = $mod SHIFT, S, exec, ~/.config/scripts/regional-screenshot
@@ -153,11 +152,12 @@ decoration {
     blur {
         enabled = false
     }
-    rounding = 0
+    rounding = 7
+    rounding_power = 2
 }
 decoration:shadow {
-    enabled = false
-}
+               enabled = false
+           }
 
 # ──────────────────────────────
 # Window decorations
@@ -167,9 +167,9 @@ general {
         allow_tearing = false
         gaps_in = 4
         gaps_out = 9
-        col.active_border = rgb(404040)
+        col.active_border = rgb(3f3f3f)
         col.inactive_border = rgb(202020)
-        border_size = 1
+        border_size = 2
 }
 # Layouts
 dwindle {
