--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -44,9 +44,9 @@ input {
 $mod = SUPER
 $terminal = footclient
 $fileManager = footclient -e lf
-$fileManager-alt = thunar
+$fileManager-alt = nautilus
 $browser = zen-browser
-$menu = rofi -show drun
+$menu = tofi-drun
 
 # ──────────────────────────────
 # Volume Control
