--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
-$accent = rgb(eeeeee)
-$accentAlpha = rgb(eeeeee)
-$text = rgb(eeeeee)
-$font = Rubik
+$accent = rgb(dfdfdf)
+$accentAlpha = rgb(dfdfdf)
+$text = rgb(dfdfdf)
+$font = Inter
 
 # GENERAL
 general {
@@ -61,9 +61,9 @@ input-field {
     dots_size = 0.2
     dots_spacing = 0.2
     dots_center = true
-    outer_color = rgb(3f4044)
-    inner_color = rgb(1e1e20)
-    font_color = rgb(eeeeee)
+    outer_color = rgb(3f3f3f)
+    inner_color = rgb(1c1c1c)
+    font_color = rgb(dfdfdf)
     fade_on_empty = false
     placeholder_text = Logged in as $USER
     hide_input = false
