Reduced systray spacing.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -122,7 +122,7 @@ bind = $mod, B, exec, $browser
 bind = $mod, F, exec, $fileManager-alt
 bind = $mod SHIFT, F, exec, $fileManager
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
-bind = $mod SHIFT, D, exec, hyprpicker
+bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, ~/.config/scripts/full-screenshot
 bind = $mod SHIFT, S, exec, ~/.config/scripts/regional-screenshot
 
