--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -8,12 +8,12 @@ font-size = 13
 font = Inter
 text-cursor=true
 prompt-text = ""
-placeholder-text=..
-placeholder-color=#757575
+placeholder-text=Type to search..
+placeholder-color=#454545
 outline-width = 0
 border-width = 0
 background-color = #1c1c1c
-text-color = "#656565"
+text-color = "#606060"
 selection-color = #dfdfdf
 min-input-width = 400
 result-spacing = 25
