New branch for all wayland configurations.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -19,6 +19,9 @@ misc {
 exec-once = waybar
 exec-once = mako
 misc:vfr = true
+binds {
+    movefocus_cycles_fullscreen = 0
+}
 
 # ──────────────────────────────
 # Monitor configuration
@@ -152,8 +155,8 @@ decoration {
     blur {
         enabled = false
     }
-    rounding = 7
-    rounding_power = 2
+    rounding = 0
+    rounding_power = 0
 }
 decoration:shadow {
                enabled = false
@@ -165,11 +168,11 @@ decoration:shadow {
 general {
     layout = master
         allow_tearing = false
-        gaps_in = 4
+        gaps_in = 4.5
         gaps_out = 9
         col.active_border = rgb(3f3f3f)
         col.inactive_border = rgb(202020)
-        border_size = 2
+        border_size = 1
 }
 # Layouts
 dwindle {
