Increased gaps and removed rounding on Hyprland.

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -12,13 +12,12 @@ dpi-aware = no
 [scrollback]
 indicator-position = none
 
-# Colorscheme
 [main]
 gamma-correct-blending= no
 
 [colors]
 # alpha = 0.8
-foreground = d2d2d2
+foreground = dfdfdf
 background = 1c1c1c
 regular0 = 353537
 regular1 = 865054
@@ -27,7 +26,7 @@ regular3 = a4965f
 regular4 = 5f7a8c
 regular5 = 75607a
 regular6 = 6a8b8b
-regular7 = d3d3d5
+regular7 = dfdfdf
 bright0 = 555557
 bright1 = 976061
 bright2 = 729a72
