--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -45,9 +45,9 @@ input {
 # Default apps
 # ──────────────────────────────
 $mod = SUPER
-$terminal = footclient
-$fileManager = footclient -e lf
-$fileManager-alt = nautilus
+$term = footclient
+$fm = footclient -e lf
+$fm-alt = nautilus
 $browser = zen-browser
 $menu = tofi-drun
 
@@ -100,8 +100,21 @@ bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, exec, ~/.config/hypr/float.sh
 bind = ALT, Return, fullscreen
-bind = $mod, RETURN, exec, $terminal
+bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
+
+# ──────────────────────────────
+# App Shortcuts
+# ──────────────────────────────
+bind = SUPER SHIFT, X, exec, ~/.config/scripts/power-menu
+bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
+bind = $mod, B, exec, $browser
+bind = $mod, F, exec, $fm-alt
+bind = $mod SHIFT, F, exec, $fm
+bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
+bind = $mod SHIFT, D, exec, hyprpicker -a
+bind = $mod, S, exec, full-screenshot
+bind = $mod SHIFT, S, exec, regional-screenshot
 
 # ──────────────────────────────
 # Window navigation 
@@ -110,34 +123,16 @@ bind = $mod, h, movefocus, l
 bind = $mod, l, movefocus, r
 bind = $mod, k, movefocus, u
 bind = $mod, j, movefocus, d
-bind = $mod SHIFT, T, togglesplit
+
+# ──────────────────────────────
+# Window movement
+# ──────────────────────────────
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
 bind = $mod SHIFT, h, movewindow, l
 bind = $mod SHIFT, l, movewindow, r
 bind = $mod SHIFT, k, movewindow, u
 bind = $mod SHIFT, j, movewindow, d
-
-# ──────────────────────────────
-# App Shortcuts
-# ──────────────────────────────
-bind = SUPER SHIFT, X, exec, ~/.config/scripts/power-menu
-bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
-bind = $mod, B, exec, $browser
-bind = $mod, F, exec, $fileManager-alt
-bind = $mod SHIFT, F, exec, $fileManager
-bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
-bind = $mod SHIFT, D, exec, hyprpicker -a
-bind = $mod, S, exec, ~/.config/scripts/full-screenshot
-bind = $mod SHIFT, S, exec, ~/.config/scripts/regional-screenshot
-
-# ──────────────────────────────
-# Window Movement & Resizing
-# ──────────────────────────────
-bindm = $mod, mouse:272, movewindow
-bindm = $mod, mouse:273, resizewindow
-bind = $mod ALT, H, resizeactive, -20 0
-bind = $mod ALT, J, resizeactive, 0 20
-bind = $mod ALT, K, resizeactive, 0 -20
-bind = $mod ALT, L, resizeactive, 20 0
 
 # ──────────────────────────────
 # Stylish window/layer rules
@@ -145,6 +140,7 @@ bind = $mod ALT, L, resizeactive, 20 0
 windowrulev2 = noshadow, focus:0
 windowrulev2 = float, class:^(swayimg)$
 windowrulev2 = float, class:^(imv)$
+windowrulev2 = noborder, floating:1, class:^(*)$
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
 
@@ -159,8 +155,8 @@ decoration {
     rounding_power = 0
 }
 decoration:shadow {
-               enabled = false
-           }
+    enabled = false
+}
 
 # ──────────────────────────────
 # Window decorations
@@ -168,8 +164,8 @@ decoration:shadow {
 general {
     layout = master
         allow_tearing = false
-        gaps_in = 4.5
-        gaps_out = 9
+        gaps_in = 5
+        gaps_out = 10
         col.active_border = rgb(3f3f3f)
         col.inactive_border = rgb(202020)
         border_size = 1
