Changed tray icon size.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 # Utilities
 exec-once = swayosd-server
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = ~/.config/scripts/power-saver
+exec-once = power-saver
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
@@ -106,7 +106,7 @@ bind = $mod, SPACE, exec, $menu
 # ──────────────────────────────
 # App Shortcuts
 # ──────────────────────────────
-bind = SUPER SHIFT, X, exec, ~/.config/scripts/power-menu
+bind = SUPER SHIFT, X, exec, power-menu
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, F, exec, $fm-alt
@@ -165,7 +165,7 @@ general {
     layout = master
         allow_tearing = false
         gaps_in = 5
-        gaps_out = 9
+        gaps_out = 10
         col.active_border = rgb(3f3f3f)
         col.inactive_border = rgb(202020)
         border_size = 2
