Added new XP wallpapers.

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -16,7 +16,7 @@ indicator-position = none
 gamma-correct-blending= no
 
 [colors]
-# alpha = 0.8
+alpha = 0.8
 foreground = dfdfdf
 background = 1c1c1c
 regular0 = 353537
