--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -10,6 +10,7 @@ env = XCURSOR_SIZE,24
 
 # Startup applications
 exec-once = foot --server
+exec-once = hyprpaper
 exec-once = nm-applet
 misc {
     force_default_wallpaper = 0
@@ -155,7 +156,8 @@ decoration {
     rounding_power = 0
 }
 decoration:shadow {
-    enabled = false
+    enabled = true
+    range = 12
 }
 
 # ──────────────────────────────
@@ -164,8 +166,8 @@ decoration:shadow {
 general {
     layout = master
         allow_tearing = false
-        gaps_in = 5
-        gaps_out = 10
+        gaps_in = 6
+        gaps_out = 12
         col.active_border = rgb(3f3f3f)
         col.inactive_border = rgb(202020)
         border_size = 2
