Added window module to waybar.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -9,9 +9,9 @@ env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
 
 # Startup applications
-exec-once = foot --server
 exec-once = hyprpaper
-exec-once = nm-applet
+exec-once = blueman-applet
+exec-once = sleep 0.5 && nm-applet
 misc {
     force_default_wallpaper = 0
         disable_hyprland_logo = true
@@ -46,8 +46,8 @@ input {
 # Default apps
 # ──────────────────────────────
 $mod = SUPER
-$term = footclient
-$fm = footclient -e lf
+$term = foot
+$fm = foot -e lf
 $fm-alt = nautilus
 $browser = zen-browser
 $menu = tofi-drun
@@ -156,9 +156,9 @@ decoration {
     rounding_power = 0
 }
 decoration:shadow {
-               enabled = true
-                   range = 12
-           }
+    enabled = true
+    range = 8
+}
 
 # ──────────────────────────────
 # Window decorations
