--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -13,8 +13,8 @@ placeholder-color=#454545
 outline-width = 0
 border-width = 0
 background-color = #1c1c1c
-text-color = "#dfdfdf"
-selection-color = #5F7A5F
+text-color = "#6f6f6f"
+selection-color = #dfdfdf
 min-input-width = 400
 result-spacing = 25
 padding-top = 2
