Added zsh plugins and fish configuration.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -10,12 +10,11 @@ env = XCURSOR_SIZE,24
 
 # Startup applications
 exec-once = hyprpaper
-exec-once = blueman-applet
 exec-once = sleep 0.5 && nm-applet
 misc {
     force_default_wallpaper = 0
-        disable_hyprland_logo = true
-        background_color = 0x151515
+    disable_hyprland_logo = true
+    background_color = 0x151515
 }
 exec-once = waybar
 exec-once = mako
@@ -24,27 +23,21 @@ binds {
     movefocus_cycles_fullscreen = 0
 }
 
-# ──────────────────────────────
 # Monitor configuration
-# ──────────────────────────────
 monitor = ,1920x1080@144,auto,1.0
 exec-once = brightnessctl set 80%
 
-# ──────────────────────────────
 # Device configurations
-# ──────────────────────────────
 input {
     kb_options = caps:escape
         touchpad {
             natural_scroll = true
         }
     accel_profile = flat
-        force_no_accel = true
+    force_no_accel = true
 }
 
-# ──────────────────────────────
 # Default apps
-# ──────────────────────────────
 $mod = SUPER
 $term = foot
 $fm = foot -e lf
@@ -52,9 +45,7 @@ $fm-alt = nautilus
 $browser = zen-browser
 $menu = tofi-drun
 
-# ──────────────────────────────
 # Volume Control
-# ──────────────────────────────
 bind = $mod, equal, exec, swayosd-client --output-volume raise
 bind = $mod, minus, exec, swayosd-client --output-volume lower
 bind = $mod SHIFT, equal, exec, swayosd-client --brightness raise
@@ -63,16 +54,12 @@ bindl = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
 bindl = , XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
 bindl = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 
-# ──────────────────────────────
 # Clipboard history
-# ──────────────────────────────
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Cliphist:" | cliphist decode | wl-copy
 
-# ──────────────────────────────
 # Workspace Management
-# ──────────────────────────────
 bind = $mod, 1, workspace, 1
 bind = $mod, 2, workspace, 2
 bind = $mod, 3, workspace, 3
@@ -94,9 +81,7 @@ bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, 0, movetoworkspace, 10
 
-# ──────────────────────────────
 # Window & Session Management
-# ──────────────────────────────
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, exec, ~/.config/hypr/float.sh
@@ -104,9 +89,7 @@ bind = ALT, Return, fullscreen
 bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
-# ──────────────────────────────
 # App Shortcuts
-# ──────────────────────────────
 bind = SUPER SHIFT, X, exec, power-menu
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
@@ -117,17 +100,13 @@ bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, full-screenshot
 bind = $mod SHIFT, S, exec, regional-screenshot
 
-# ──────────────────────────────
 # Window navigation 
-# ──────────────────────────────
 bind = $mod, h, movefocus, l
 bind = $mod, l, movefocus, r
 bind = $mod, k, movefocus, u
 bind = $mod, j, movefocus, d
 
-# ──────────────────────────────
 # Window movement
-# ──────────────────────────────
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 bind = $mod SHIFT, h, movewindow, l
@@ -135,9 +114,7 @@ bind = $mod SHIFT, l, movewindow, r
 bind = $mod SHIFT, k, movewindow, u
 bind = $mod SHIFT, j, movewindow, d
 
-# ──────────────────────────────
 # Stylish window/layer rules
-# ──────────────────────────────
 windowrulev2 = noshadow, focus:0
 windowrulev2 = float, class:^(swayimg)$
 windowrulev2 = float, class:^(imv)$
@@ -145,13 +122,16 @@ windowrulev2 = noborder, floating:1, class:^(*)$
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
 
-# ──────────────────────────────
 # Disable decorations & effects
-# ──────────────────────────────
 decoration {
     blur {
-         enabled = false
-                                                                                    }
+        enabled = false
+        size = 4
+        passes = 2
+        new_optimizations = true
+        ignore_opacity = false
+        xray = false
+    }
     rounding = 0
     rounding_power = 0
 }
@@ -160,22 +140,20 @@ decoration:shadow {
     range = 8
 }
 
-# ──────────────────────────────
 # Window decorations
-# ──────────────────────────────
 general {
     layout = master
-        allow_tearing = false
-        gaps_in = 6
-        gaps_out = 12
-        col.active_border = rgb(3f3f3f)
-        col.inactive_border = rgb(202020)
-        border_size = 2
+    allow_tearing = false
+    gaps_in = 6
+    gaps_out = 12
+    col.active_border = rgba(3f3f3fff)
+    col.inactive_border = rgba(202020ff)
+    border_size = 2
 }
 # Layouts
 dwindle {
     pseudotile = yes
-        preserve_split = yes
+    preserve_split = yes
 }
 
 master {
@@ -186,23 +164,17 @@ gestures {
     workspace_swipe = off
 }
 
-misc {
-    force_default_wallpaper = 0
-}
-
-# ──────────────────────────────
 # Disable animations
-# ──────────────────────────────
 animations {
     enabled = false
-        bezier = wind, 0.05, 0.9, 0.1, 1.05
-        bezier = winIn, 0.1, 1.0, 0.1, 1.0
-        bezier = winOut, 0.3, -0.3, 0, 1
-        bezier = liner, 1, 1, 1, 1
-        animation = windowsIn, 1, 3, winIn, popin 80%
-        animation = windowsOut, 1, 3, winOut, slide
-        animation = windowsMove, 1, 3, wind
-        animation = border, 1, 1, liner
-        animation = borderangle, 1, 30, liner, once
-        animation = workspaces, 0, 0
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.0, 0.1, 1.0
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windowsIn, 1, 3, winIn, popin 80%
+    animation = windowsOut, 1, 3, winOut, slide
+    animation = windowsMove, 1, 3, wind
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, once
+    animation = workspaces, 0, 0
 }
