Added some stuff.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -92,8 +92,8 @@ bind = $mod, SPACE, exec, $menu
 bind = SUPER SHIFT, X, exec, power-menu
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
-bind = $mod, F, exec, $fm-alt
-bind = $mod SHIFT, F, exec, $fm
+bind = $mod, F, exec, $fm
+bind = $mod SHIFT, F, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
 bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, full-screenshot
