Removed noice.nvim and binded some OBS stuff to Hyprland.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -90,7 +90,6 @@ bind = $mod, SPACE, exec, $menu
 
 # App Shortcuts
 bind = SUPER SHIFT, X, exec, power-menu
-bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, F, exec, $fm
 bind = $mod SHIFT, F, exec, $fm-alt
@@ -98,6 +97,8 @@ bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
 bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, full-screenshot
 bind = $mod SHIFT, S, exec, regional-screenshot
+bind = , F9, pass, class:^(com\.obsproject\.Studio)$
+bind = , F10, pass, class:^(com\.obsproject\.Studio)$
 
 # Window navigation 
 bind = $mod, h, movefocus, l
