Changed a few dependency stuff

--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -1,8 +1,7 @@
 layer=overlay
 margin=6,6,6,12
-height=150
 default-timeout=3000
-background-color=#1e1e20
-border-color=#3f4044
-border-radius=7
-font=Rubik, monospace 13
+background-color=#1c1c1c
+border-color=#404040
+border-radius=0
+font=Inter, monospace 13
