--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -68,7 +68,6 @@ bind = $mod, 6, workspace, 6
 bind = $mod, 7, workspace, 7
 bind = $mod, 8, workspace, 8
 bind = $mod, 9, workspace, 9
-bind = $mod, 0, workspace, 10
 bind = $mod SHIFT, 1, movetoworkspace, 1
 bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
@@ -78,12 +77,11 @@ bind = $mod SHIFT, 6, movetoworkspace, 6
 bind = $mod SHIFT, 7, movetoworkspace, 7
 bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
-bind = $mod SHIFT, 0, movetoworkspace, 10
 
 # Window & Session Management
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
-bind = $mod SHIFT, SPACE, exec, ~/.config/hypr/float.sh
+bind = $mod SHIFT, SPACE, exec, hyprctl dispatch togglefloating
 bind = ALT, Return, fullscreen
 bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
