Changed dependency stuff.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ input {
 $mod = SUPER
 $term = foot
 $fm = foot -e lf
-$fm-alt = nautilus
+$fm-alt = thunar
 $browser = zen-browser
 $menu = tofi-drun
 
