--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -4,17 +4,16 @@ font-bold = monospace:weight=bold:size=13.15
 font-italic = monospace:weight=regular:slant=italic:size=13.15
 font-bold-italic = monospace:weight=bold:slant=italic:size=13.15
 
-# Monitor configuration
 pad = 5x5 center
 dpi-aware = no
 
-# Scrollback configuration
 [scrollback]
 indicator-position = none
 
 [main]
-gamma-correct-blending= no
+gamma-correct-blending = no
 
+# Colorscheme
 [colors]
 alpha = 0.8
 foreground = dfdfdf
