Changed tofi stuff.

--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -7,17 +7,17 @@ horizontal = true
 font-size = 13
 font = Inter
 text-cursor=true
-prompt-text = " "
+prompt-text = ""
 placeholder-text=Type to search..
 placeholder-color=#454545
 outline-width = 0
 border-width = 0
 background-color = #1c1c1c
-text-color = "#6f6f6f"
+text-color = "#595959"
 selection-color = #dfdfdf
 min-input-width = 400
 result-spacing = 25
 padding-top = 2
 padding-bottom = 0
-padding-left = 4
+padding-left = 8
 padding-right = 0
