--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -89,8 +89,8 @@ bind = $mod, SPACE, exec, $menu
 # App Shortcuts
 bind = SUPER SHIFT, X, exec, power-menu
 bind = $mod, B, exec, $browser
-bind = $mod, F, exec, $fm
-bind = $mod SHIFT, F, exec, $fm-alt
+bind = $mod, e, exec, $fm
+bind = $mod SHIFT, e, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
 bind = $mod SHIFT, D, exec, hyprpicker -a
 bind = $mod, S, exec, full-screenshot
