Changed saved screenshot directory.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 # Utilities
 exec-once = swayosd-server
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = power-saver
+exec-once = ~/.bin/power-saver
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
@@ -87,14 +87,14 @@ bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
 # App Shortcuts
-bind = SUPER SHIFT, X, exec, power-menu
+bind = SUPER SHIFT, X, exec, ~/.bin/power-menu
 bind = $mod, B, exec, $browser
-bind = $mod, e, exec, $fm
-bind = $mod SHIFT, e, exec, $fm-alt
+bind = $mod, f, exec, $fm
+bind = $mod SHIFT, f, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
 bind = $mod SHIFT, D, exec, hyprpicker -a
-bind = $mod, S, exec, full-screenshot
-bind = $mod SHIFT, S, exec, regional-screenshot
+bind = $mod, S, exec, ~/.bin/full-screenshot
+bind = $mod SHIFT, S, exec, ~/.bin/regional-screenshot
 bind = , F9, pass, class:^(com\.obsproject\.Studio)$
 bind = , F10, pass, class:^(com\.obsproject\.Studio)$
 
@@ -144,7 +144,7 @@ general {
     gaps_in = 6
     gaps_out = 12
     col.active_border = rgba(404040ff)
-    col.inactive_border = rgba(35353580)
+    col.inactive_border = rgba(30303080)
     border_size = 2
 }
 # Layouts
