--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -5,7 +5,7 @@ width = 100%
 height = 25
 horizontal = true
 font-size = 13
-font = Rubik
+font = Inter
 text-cursor=true
 prompt-text = ""
 placeholder-text=Type to search..
