--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -5,5 +5,6 @@ height=150
 default-timeout=3000
 background-color=#1c1c1c
 border-color=#404040
-border-radius=0
+border-radius=7
+text-alignment=center
 font=Inter, monospace 13
