Simplified Foot configurations.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -87,7 +87,8 @@ bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
 # App Shortcuts
-bind = SUPER SHIFT, X, exec, ~/.bin/power-menu
+bind = $mod SHIFT, X, exec, ~/.bin/power-menu
+bind = $mod, Q, exec, ~/.bin/kill-all
 bind = $mod, B, exec, $browser
 bind = $mod, f, exec, $fm
 bind = $mod SHIFT, f, exec, $fm-alt
