--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,36 +1,32 @@
-# Font configuration
-font = monospace:weight=regular:size=13.15
-font-bold = monospace:weight=bold:size=13.15
-font-italic = monospace:weight=regular:slant=italic:size=13.15
-font-bold-italic = monospace:weight=bold:slant=italic:size=13.15
-
-pad = 5x5 center
-dpi-aware = no
+font=monospace:size=13.15
+pad=5x5 center
+dpi-aware=no
+resize-by-cells=no
 
 [scrollback]
-indicator-position = none
+indicator-position=none
 
 [main]
-gamma-correct-blending = no
+gamma-correct-blending=no
 
 # Colorscheme
 [colors]
-alpha = 0.8
-foreground = dfdfdf
-background = 1c1c1c
-regular0 = 353537
-regular1 = 865054
-regular2 = 5f7a5f
-regular3 = a4965f
-regular4 = 5f7a8c
-regular5 = 75607a
-regular6 = 6a8b8b
-regular7 = dfdfdf
-bright0 = 454545
-bright1 = 976061
-bright2 = 729a72
-bright3 = a49a72
-bright4 = 72949a
-bright5 = 8c729a
-bright6 = 729a96
-bright7 = f1f1f1
+alpha=0.8
+foreground=dfdfdf
+background=1c1c1c
+regular0=353537
+regular1=865054
+regular2=5f7a5f
+regular3=a4965f
+regular4=5f7a8c
+regular5=75607a
+regular6=6a8b8b
+regular7=dfdfdf
+bright0=454545
+bright1=976061
+bright2=729a72
+bright3=a49a72
+bright4=72949a
+bright5=8c729a
+bright6=729a96
+bright7=f1f1f1
