Made a couple of changes to rofi and waybar.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ $term = foot
 $fm = foot -e lf
 $fm-alt = thunar
 $browser = zen-browser
-$menu = tofi-drun
+$menu = rofi -show drun
 
 # Volume Control
 bind = $mod, equal, exec, swayosd-client --output-volume raise
@@ -56,7 +56,7 @@ bindl = , XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
-bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Cliphist:" | cliphist decode | wl-copy
+bind = $mod, V, exec, cliphist list | rofi -dmenu -p "" | cliphist decode | wl-copy
 
 # Workspace Management
 bind = $mod, 1, workspace, 1
@@ -88,8 +88,8 @@ bind = $mod, SPACE, exec, $menu
 
 # App Shortcuts
 bind = $mod SHIFT, X, exec, ~/.bin/power-menu
-bind = $mod, Q, exec, ~/.bin/kill-all
-bind = $mod, B, exec, $browser
+bind = $mod, w, exec, pkill waybar && waybar
+bind = $mod, b, exec, $browser
 bind = $mod, f, exec, $fm
 bind = $mod SHIFT, f, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
