--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -3,7 +3,7 @@
     "layer": "top",
     "position": "top",
     "height": 26,
-    "spacing": 5,
+    "spacing": 8,
     "modules-left": [
         "hyprland/workspaces",
         "hyprland/window"
@@ -11,9 +11,10 @@
     "modules-center": [
     ],
     "modules-right": [
+        "tray",
         "network",
+        "pulseaudio",
         "battery",
         "clock",
-        "tray",
     ],
 }
