Replaced hyprpaper with wbg.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
 
 # Startup applications
-exec-once = hyprpaper
+exec-once = wbg ~/Pictures/Wallpapers/XP.jpg
 misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = true
