Changed some rofi stuff.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -94,8 +94,8 @@ bind = $mod, f, exec, $fm
 bind = $mod SHIFT, f, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
 bind = $mod SHIFT, D, exec, hyprpicker -a
-bind = $mod, S, exec, ~/.bin/full-screenshot
-bind = $mod SHIFT, S, exec, ~/.bin/regional-screenshot
+bind = $mod, S, exec, ~/.bin/full-capture
+bind = $mod SHIFT, S, exec, ~/.bin/region-capture
 bind = , F9, pass, class:^(com\.obsproject\.Studio)$
 bind = , F10, pass, class:^(com\.obsproject\.Studio)$
 
