Fixed my fastfetch configuration.

--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -3,9 +3,8 @@
     "display": {
         "separator": " "
     },
-
     "logo": {
-        "source": "/home/joaquin/.config/fastfetch/logo.txt"
+        "source": "$HOME/.config/fastfetch/logo.txt"
     },
 
     "modules": [
