Changed some stuff. Very subtle.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -89,7 +89,7 @@ bind = $mod, SPACE, exec, $menu
 # App Shortcuts
 bind = $mod SHIFT, X, exec, ~/.bin/power-menu
 bind = $mod, w, exec, pkill waybar && waybar
-bind = $mod, b, exec, $browser
+bind = $mod, b, exec, bash -c '$browser || flatpak run app.zen_browser.zen'
 bind = $mod, f, exec, $fm
 bind = $mod SHIFT, f, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
