--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -2,7 +2,7 @@
     "include": "~/.config/waybar/modules.json",
     "layer": "top",
     "position": "top",
-    "height": 26,
+    "height": 28,
     "spacing": 8,
     "modules-left": [
         "hyprland/workspaces",
@@ -14,6 +14,6 @@
         "network",
         "battery",
         "clock",
-        "tray"
+        "group/tray-expander",
     ],
 }
