--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -70,7 +70,7 @@ input-field {
     check_color = $accent
     fail_color = rgb(865054)
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-    font_family = JetbrainsMono Nerd Font Mono
+    font_family = monospace
     capslock_color = rgb(a4965f)
     position = 0, -35
     halign = center
