Replaced thunar with nautilus.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ $mod = SUPER
 $term = foot
 $fm = foot -e lf
 $fm-alt = thunar
-$browser = zen-browser
+$browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
 $menu = rofi -show drun
 
 # Volume Control
@@ -82,14 +82,14 @@ bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, exec, hyprctl dispatch togglefloating
-bind = ALT, Return, fullscreen
+bind = , F11, fullscreen
 bind = $mod, RETURN, exec, $term
 bind = $mod, SPACE, exec, $menu
 
 # App Shortcuts
 bind = $mod SHIFT, X, exec, ~/.bin/power-menu
 bind = $mod, w, exec, pkill waybar && waybar
-bind = $mod, b, exec, bash -c '$browser || flatpak run app.zen_browser.zen'
+bind = $mod, b, exec, $browser
 bind = $mod, f, exec, $fm
 bind = $mod SHIFT, f, exec, $fm-alt
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji
