Replaced thunar on hyprland as well.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ input {
 $mod = SUPER
 $term = foot
 $fm = foot -e lf
-$fm-alt = thunar
+$fm-alt = nautilus
 $browser = bash -c 'zen-browser || flatpak run app.zen_browser.zen'
 $menu = rofi -show drun
 
