Changed tray icon.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -114,8 +114,8 @@ bind = $mod SHIFT, k, movewindow, u
 bind = $mod SHIFT, j, movewindow, d
 
 # Stylish window/layer rules
+windowrulev2 = workspace, class:^(foot)$, follow=active
 windowrulev2 = noshadow, focus:0
-windowrulev2 = float, class:^(swayimg)$
 windowrulev2 = float, class:^(imv)$
 layerrule = ignorealpha, rofi
 layerrule = ignorezero, notifications
