IDK what I did.

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -2,6 +2,7 @@
     "include": "~/.config/waybar/modules.json",
     "layer": "top",
     "position": "top",
+    "height": 28,
     "spacing": 4,
     "modules-left": [
         "hyprland/workspaces",
